fix: corrección del retorno del objecto producto para aplicar jsonAPI